# SlicerGitSVNArchive

./: CMakeLists.txt  SuperBuild.cmake  conda-cmd
Applications/SlicerApp/: CMakeLists.txt  Main.cxx
Base/Logic/: CMakeLists.txt  vtkImageSlicePaint.cxx  vtkImageSlicePaint.h  vtkOpenGLScriptedActor.cxx  vtkOpenGLScriptedActor.h  vtkSlicerTransformLogic.cxx  vtkSlicerTransformLogic.h
Base/Python/: CMakeLists.txt
Base/QTCLI/: CMakeLists.txt
Base/QTCore/: CMakeLists.txt  qSlicerCoreApplication.cxx  qSlicerCoreApplication.h  qSlicerCorePythonManager.cxx
Base/QTGUI/: CMakeLists.txt  qSlicerApplication.cxx  qSlicerDataDialog.cxx  qSlicerIconEnginePlugin.cxx  qSlicerPythonManager.cxx  qSlicerSaveDataDialog.cxx  qSlicerScriptedLoadableModule.cxx  qSlicerScriptedLoadableModuleWidget.cxx  qSlicerStyle.cxx  qSlicerWebWidget.cxx  qSlicerWebWidget.h
CMake/: SlicerBlockCTKAppLauncherSettings.cmake  SlicerBlockFindQtAndCheckVersion.cmake  SlicerBlockInstallPython.cmake  SlicerBlockSetCMakeOSXVariables.cmake  SlicerMacroBuildApplication.cmake  SlicerMacroBuildBaseQtLibrary.cmake  SlicerMacroBuildModuleQtLibrary.cmake  SlicerMacroBuildQtModule.cmake  SlicerMacroPythonWrapModuleVTKLibrary.cmake  SlicerMacroTranslation.cmake  vtkMacroKitPythonWrap.cmake  vtkSlicerConfigure.h.in
Modules/CLI/DiffusionTensorScalarMeasurements/: CMakeLists.txt
Modules/CLI/DiffusionWeightedVolumeMasking/: CMakeLists.txt
Modules/CLI/DiffusionWeightedVolumeMasking/Testing/: CMakeLists.txt
SuperBuild/: External_CTK.cmake  External_ITKv4.cmake  External_SimpleITK.cmake  External_VTK.cmake  External_VTKv5.cmake  External_VTKv6.cmake  External_VTKv7.cmake  External_miniconda.cmake  External_python.cmake
(+184 files in other folders)
